--- a/home/src/main/res/layout/activity_photoview.xml
+++ b/home/src/main/res/layout/activity_photoview.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <RelativeLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -13,33 +10,47 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/app_name"
                 android:id="@+id/intent_username" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
-                android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:layout_margin="10dp"/>
+                android:textStyle="bold" android:textColor="@android:color/holo_blue_dark"
+                android:layout_marginTop="10dp" android:textAlignment="center"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/app_name"
+                android:id="@+id/intent_realname"
+                android:layout_below="@+id/intent_username" android:layout_centerHorizontal="true"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/app_name"
+                android:id="@+id/intent_location"
+                android:layout_below="@+id/intent_realname" android:layout_centerHorizontal="true"/>
         <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="250dp"
+                android:layout_height="200dp"
                 android:id="@+id/large_image"
                 android:src="@drawable/ic_launcher"
                 android:contentDescription="@string/image_title"
-                android:layout_below="@+id/intent_username" android:layout_centerHorizontal="true" android:layout_margin="20dp"/>
+                android:layout_below="@+id/intent_location" android:layout_centerHorizontal="true"
+                android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp"/>
         <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:text="@string/header_main"
                 android:id="@+id/intent_title" android:layout_below="@+id/large_image" android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" android:layout_margin="20dp"/>
+                android:layout_alignParentEnd="true" android:layout_margin="10dp"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/rating_bar" android:layout_below="@+id/intent_title" android:layout_centerHorizontal="true"
-                android:layout_margin="20dp"/>
+                android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/onWeb"
                 android:id="@+id/flickr_web" android:layout_below="@+id/rating_bar"
-                android:layout_margin="20dp"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true" android:layout_marginTop="10dp"/>
 
     </RelativeLayout>
-</ScrollView>
