--- a/Rebased/home/src/main/res/layout/activity_flickrphoto_list.xml
+++ b/Rebased/home/src/main/res/layout/activity_flickrphoto_list.xml
@@ -1,10 +1,9 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/flickrphoto_list"
-    android:name="com.stratazima.flickrviewer.home.FlickrPhotoListFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    tools:context="com.stratazima.flickrviewer.home.FlickrPhotoListActivity"
-    tools:layout="@android:layout/list_content" />
+<RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
+        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
+    <fragment android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:name="com.stratazima.flickrviewer.home.FlickrPhotoListFragment" android:id="@+id/daListFrag"
+              android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
+              android:layout_alignParentStart="true" tools:layout="@layout/fragment_flickrphoto_list"/>
+</RelativeLayout>
