--- a/Rebased/home/src/main/res/layout/item_header.xml
+++ b/Rebased/home/src/main/res/layout/item_header.xml
@@ -11,7 +11,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/header_main"
             android:textColor="@android:color/holo_blue_dark"
-            android:id="@+id/textView" android:layout_gravity="center_horizontal" android:textStyle="bold"/>
+            android:id="@+id/welcome_View" android:layout_gravity="center_horizontal" android:textStyle="bold"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
