--- a/Rebased/home/src/main/res/layout/item_header.xml
+++ b/Rebased/home/src/main/res/layout/item_header.xml
@@ -8,6 +8,11 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_light"
+            android:id="@+id/emptyView" android:layout_gravity="center_horizontal" android:textStyle="bold"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/header_main"
             android:textColor="@android:color/holo_blue_dark"
