--- a/Rebased/home/src/main/res/menu/main.xml
+++ b/Rebased/home/src/main/res/menu/main.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/action_search"
+    <item android:actionViewClass="android.widget.SearchView"
+          android:id="@+id/action_search"
           android:title="@string/action_search"
           android:icon="@drawable/ic_action_action_search"
           android:orderInCategory="1"
